<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/menu"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/editTextPasta"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="315dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/hargaPasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="51dp"
                    android:fontFamily="sans-serif"
                    android:text="11.000"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pasta"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imagePasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/pasta_small" />
            </RelativeLayout>

            <View
                android:layout_width="380dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/editTextPizza"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="315dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/hargaPizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="51dp"
                    android:fontFamily="sans-serif"
                    android:text="16.000"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pizza"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imagePizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/pizza_small" />
            </RelativeLayout>

            <View
                android:layout_width="380dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/editTextSalad"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="315dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/hargaSalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="51dp"
                    android:fontFamily="sans-serif"
                    android:text="4.000"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textSalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/salad"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageSalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/salad_small" />
            </RelativeLayout>

            <TextView
                android:id="@+id/addMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/addmenu"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:id="@+id/groupMenu">

                    <RadioButton
                        android:id="@+id/radioPickles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/pickles" />

                    <RadioButton
                        android:id="@+id/radioSauce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/sauce" />
                </RadioGroup>

                <ImageView
                    android:id="@+id/imagePickles"
                    android:layout_width="114dp"
                    android:layout_height="114dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/pickles_small" />

                <ImageView
                    android:id="@+id/imageSauce"
                    android:layout_width="114dp"
                    android:layout_height="114dp"
                    android:layout_marginStart="215dp"
                    android:layout_marginTop="50dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/sauce_small" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="Membership Card (Discount 7%)" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="380dp"
                android:layout_height="191dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                cardview:cardCornerRadius="10dp"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:text="Order Detail" />

                <TextView
                    android:id="@+id/textcoba1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:text="Total Item" />

                <TextView
                    android:id="@+id/textcoba2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:text="Price" />

                <TextView
                    android:id="@+id/textcoba3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:text="Additional Menu"
                    />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/purple_700"
            android:text="ORDER"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

